IFS-3862 Bugfix for task list spacing

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_task-list.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_task-list.scss
@@ -40,6 +40,7 @@
       display: inline-block;
       width: 30%;
       padding-left: 20px;
+      margin-bottom: 0;
 
       .assign-team {
         margin-top: 0;
